# src/routes/lokasi.ts
@@ -6,12 +6,13 @@ import { USER_ROLE } from "../utils/constants.js";
 
 const lokasiRouter = Router();
 lokasiRouter.use(verifyJWTToken);
-lokasiRouter.use(requireRole(USER_ROLE.ADMIN, USER_ROLE.KARYAWAN));
+const readAccess = requireRole(USER_ROLE.ADMIN, USER_ROLE.KARYAWAN, USER_ROLE.HR);
+const writeAccess = requireRole(USER_ROLE.ADMIN, USER_ROLE.KARYAWAN);
 
-lokasiRouter.get('/', (req, res) => lokasiController.getAll(req, res));
-lokasiRouter.get('/:lokasi_id', (req, res) => lokasiController.getByID(req, res));
-lokasiRouter.post('/', (req, res) => lokasiController.create(req, res));
-lokasiRouter.patch('/:lokasi_id', (req, res) => lokasiController.update(req, res));
-lokasiRouter.delete('/:lokasi_id',(req, res) => lokasiController.delete(req, res));
+lokasiRouter.get('/', readAccess, (req, res) => lokasiController.getAll(req, res));
+lokasiRouter.get('/:lokasi_id', readAccess, (req, res) => lokasiController.getByID(req, res));
+lokasiRouter.post('/', writeAccess, (req, res) => lokasiController.create(req, res));
+lokasiRouter.patch('/:lokasi_id', writeAccess, (req, res) => lokasiController.update(req, res));
+lokasiRouter.delete('/:lokasi_id', writeAccess, (req, res) => lokasiController.delete(req, res));
 
 export default lokasiRouter;
